[tool.poetry]
name = "studio_help"
version = "0.1.0"
description = ""
authors = ["William Hayes <william.s.hayes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs-material = "^6.1.0"
markdownify = "^0.5.3"
playwright = "^0.151.1"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.3"
httpx = "^0.16.1"
pillow = "^8.0.1"
mkdocs-roamlinks-plugin = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
